--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid ">
-              <a class="navbar-brand logo" href="index.html">Classs Digital</a>
+            <div class="container-fluid mx-5 mt-3">
+              <a class="navbar-brand" href="index.html" style="font-family: Brush Script MT, cursive; font-size: 35px; color: blue;">Classs Digital</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav me-5 mt-4">
+                <div class="navbar-nav">
                   <a class="btn btn-secondary me-3" href="home.html">HOME</a>
                   <a class="btn btn-primary" href="login.html">LOGIN</a>
                 </div>
               </div>
             </div>
           </nav>
-          
     </header>
+
+    <main>
+        <div class="image-container">
+            <img src="img/learn.png" alt="Success image">
+        </div>
+    </main>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
