--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid mx-5 mt-3">
-              <a class="navbar-brand" href="index.html" style="font-family: Brush Script MT, cursive; font-size: 35px; color: blue;">Classs Digital</a>
+        <nav class="navbar navbar-expand-lg bg-transparan">
+            <div class="container-fluid mx-5 ">
+              <a class="navbar-brand" id="logo-Text" href="index.html">Classs Digital</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -26,11 +26,39 @@
     </header>
 
     <main>
-        <div class="image-container">
-            <img src="img/learn.png" alt="Success image">
-        </div>
+        <div class="container-fluid py-5 bg-dark text-light text-center">
+            <h1 class="display-4">Selamat Datang di Class Digital</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <hr class="my-4">
+            <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+
+<!-- Section for 6 images in a responsive grid -->
+<div class="container my-5">
+    <div class="row">
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 1">
+      </div>
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 2">
+      </div>
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 3">
+      </div>
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 4">
+      </div>
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 5">
+      </div>
+      <div class="col-6 col-md-4 mb-4">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 6">
+      </div>
+    </div>
+  </div>
+
+
     </main>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
