--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLASS DIGITAL</title>
+    <!--koneksi css bootstrap dan css eksternal-->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <header>
+        <!--Penambahan navbar transparan -->
         <nav class="navbar navbar-expand-lg bg-transparan">
             <div class="container-fluid mx-5 ">
               <a class="navbar-brand" id="logo-Text" href="index.html">Classs Digital</a>
@@ -26,6 +28,7 @@
     </header>
 
     <main>
+        <!--Penambahan Jumbotron di bootstrap 5-->
         <div class="container-fluid py-5 bg-dark text-light text-center">
             <h1 class="display-4">Selamat Datang di Class Digital</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
@@ -33,29 +36,29 @@
             <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
 
-<!-- Section for 6 images in a responsive grid -->
-<div class="container my-5">
-    <div class="row">
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 1">
-      </div>
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 2">
-      </div>
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 3">
-      </div>
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 4">
-      </div>
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 5">
-      </div>
-      <div class="col-6 col-md-4 mb-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 6">
-      </div>
-    </div>
-  </div>
+        <!-- IMG RESPONSIF -->
+        <div class="container my-5">
+            <div class="row">
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 1">
+            </div>
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 2">
+            </div>
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 3">
+            </div>
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 4">
+            </div>
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 5">
+            </div>
+            <div class="col-6 col-md-4 mb-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" class="img-thumbnail" alt="Image 6">
+            </div>
+            </div>
+        </div>
 
 
     </main>
