--- a/login.html
+++ b/login.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Digital</title>
-    <link rel="stylesheet" href="external.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1 class="logo">Class Digital</h1>
-            <nav>
-                <ul>
-                    <li><a href="home.html" class="nav-link home-btn">Home</a></li>
-                    <li><a href="home.html" class="nav-link login-btn">Login</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="login-container">
-            <h1 class="login-title">LOGIN</h1>
-            <p class="login-subtitle">Ijinkan Sistem Mengenali Anda</p>
-            <div class="login-box">
-                <div class="input-container">
-                <span class="icon">&#128100;</span>
-                    <input type="text" placeholder="Username">
-                </div>
-                <div class="input-container">
-                    <span class="icon">&#128274;</span>
-                    <input type="password" placeholder="Password">
-                </div>
-                <a href="home.html"><button class="login-button">Login</button></a>
+
+<body class="login-page">
+
+    <!-- Jumbotron untuk Login -->
+    <div class="jumbotron">
+        <h1 class="display-5 text-center">Login</h1>
+        <p class="lead text-center">Silakan masuk ke akun Anda</p>
+        <hr class="my-4">
+        <!-- Form untuk Login -->
+        <form action="home.html" method="GET">
+            <div class="mb-3">
+                <label for="username" class="form-label">👤Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Masukkan Username">
             </div>
-        </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">🔒Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Masukkan Password">
+            </div>
+            <button type="submit" class="btn btn-custom">Login</button>
+        </form>
     </div>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </html>
