--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 <body class="login-page">
 
     <!-- Jumbotron untuk Login -->
-    <div class="jumbotron">
+    <div class="jumbotron-login">
         <h1 class="display-5 text-center">Login</h1>
         <p class="lead text-center">Silakan masuk ke akun Anda</p>
         <hr class="my-4">
@@ -33,5 +33,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </html>
