--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Digital</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,6 +17,7 @@
         <h1 class="display-5 text-center">Login</h1>
         <p class="lead text-center">Silakan masuk ke akun Anda</p>
         <hr class="my-4">
+
         <!-- Form untuk Login -->
         <form action="home.html" method="GET">
             <div class="mb-3">
@@ -30,9 +31,13 @@
             <button type="submit" class="btn btn-custom">Login</button>
         </form>
     </div>
+
+    <!-- Menghubungkan file JavaScript eksternal -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
+
+</body>
 
 </html>
