--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="row">
           <div class="col-md-3">
               <div class="card">
-                  <img src="dosen.jpg" alt="Dosen" class="card-img-top">
+                  <img src="img/dosen.jpg" alt="Dosen" class="card-img-top">
                   <div class="card-body">
                       <h5 class="card-title">Panduan Dosen</h5>
                       <p>Panduan penggunaan aplikasi untuk Dosen</p>
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-3">
               <div class="card">
-                  <img src="mahasiswa.jpg" alt="Mahasiswa" class="card-img-top">
+                  <img src="img/mahasiswa.jpg" alt="Mahasiswa" class="card-img-top">
                   <div class="card-body">
                       <h5 class="card-title">Panduan Mahasiswa</h5>
                       <p>Panduan penggunaan aplikasi untuk Mahasiswa</p>
@@ -78,7 +78,7 @@
           </div>
           <div class="col-md-3">
               <div class="card">
-                  <img src="staf.jpg" alt="Staf Prodi" class="card-img-top">
+                  <img src="img/staf.jpg" alt="Staf Prodi" class="card-img-top">
                   <div class="card-body">
                       <h5 class="card-title">Panduan Staf Prodi</h5>
                       <p>Panduan penggunaan aplikasi untuk Staf Prodi</p>
