--- a/login.html
+++ b/login.html
@@ -4,31 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>CLASS DIGITAL</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body class="login-page">
-
     <!-- Jumbotron untuk Login -->
     <div class="jumbotron-login">
-        <h1 class="display-5 text-center">Login</h1>
-        <p class="lead text-center">Silakan masuk ke akun Anda</p>
+        <h1 class="display-5 text-center">LOGIN</h1>
+        <p class="lead text-center">Silakan Masuk ke Akun Anda</p>
+        <p style="font-size: small; text-align: center;">
+            Belum memiliki akun? <a href="signup.html">Signup di sini</a>
+        </p>
         <hr class="my-4">
 
         <!-- Form untuk Login -->
-        <form action="home.html" method="GET">
+        <form id="loginForm" action="dashboard.html" method="GET">
             <div class="mb-3">
                 <label for="username" class="form-label">👤Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Masukkan Username">
+                <input type="text" class="form-control" id="loginusername" placeholder="Masukkan Username" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">🔒Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Masukkan Password">
+                <input type="password" class="form-control" id="loginpassword" placeholder="Masukkan Password" required>
             </div>
-            <button type="submit" class="btn btn-custom">Login</button>
+            <button type="submit" class="btn btn-custom">LOGIN</button>
         </form>
     </div>
 
