--- a/dashboard.html
+++ b/dashboard.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>CLASSROOM DIGITAL</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -13,7 +12,6 @@
 </head>
 
 <body>
-    <!-- Membuat SideBar-->
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -60,7 +58,7 @@
                     </ul>
                 </li>
                 <li class="sidebar-item">
-                    <a href="fitur1.html" class="sidebar-link">
+                    <a href="#" class="sidebar-link">
                         <i class="lni lni-popup"></i>
                         <span>Fitur 1</span>
                     </a>
@@ -73,17 +71,17 @@
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a id="LogOutButton" class="sidebar-link">
                     <i class="lni lni-exit"></i>
-                    <span>Logout</span>
+                    <span>LOG OUT</span>
                 </a>
             </div>
         </aside>
-        
+
         <!-- Main -->
         <div class="main p-3">
             <h1>Anda memiliki 0 mata kuliah</h1>
-            <p class="desc">We have professional alliance's with leading Universities and Colleges around the world
+            <p class="desc">Fitur 1
             </p>
         </div>
     </div>
