--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>CLASSROOM DIGITAL</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -33,7 +33,7 @@
             </nav>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="home.html" class="sidebar-link">
+                    <a href="fitur1.html" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
@@ -73,24 +73,23 @@
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a id="LogOutButton" class="sidebar-link">
                     <i class="lni lni-exit"></i>
-                    <span>Logout</span>
+                    <span>LOG OUT</span>
                 </a>
             </div>
         </aside>
 
         <!-- Main -->
         <div class="main p-3">
-
-
             <!-- Bagian Profile -->
             <div class="profile mt-4">
                 <h2>Profile Saya</h2>
-                <img src="img/Minion.jpg" alt="Foto Profil" class="img-fluid rounded-circle">
-                <p><strong>Nama:</strong> 1</p>
-                <p><strong>Email:</strong> 2</p>
+                <img src="img/Minion.jpg" alt="Foto Profil" class="img-thumbnail rounded-circle">
+                <p><strong>Nama:</strong> 1 </p>
+                <p><strong>Email:</strong> 2 </p>
                 <p><strong>Telepon:</strong> 3 </p>
+                <p><strong>Alamat:</strong> 4 </p>
                 <p><strong>Tentang Saya:</strong> Saya seorang pengembang web</p>
             </div>
             <!-- Akhir Bagian Profile -->
