--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Contact Us" class="card-img-top">
+            <img src="img/contactus.jpg" alt="Contact Us" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Contact Us</h5>
               <p>Ahmad Damiri<br>M. Thoriq</p>
