--- a/signup.html
+++ b/signup.html
@@ -34,16 +34,14 @@
                 <label for="password" class="form-label">🔒Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Buat Password" required>
             </div>
-            <button type="submit" class="btn btn-custom">SIGNUP</button>
+            <button type="submit" class="btn btn-custom w-100">SIGNUP</button>
         </form>
     </div>
 
-    <!-- Menghubungkan file JavaScript eksternal -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script> <!-- Pastikan script.js berada di lokasi yang tepat -->
-
+    <!-- Menghubungkan file jQuery eksternal -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="jQuery.js"></script>
 </body>
 
 </html>
