--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-expand-lg bg-transparan">
                 <div class="container-fluid mx-5">
                     <div class="ms-auto">
-                        <a class="navbar-brand" id="logo-Text-home" href="index.html">Class Digital</a>
+                        <a class="navbar-brand" id="logo-Text-home" href="home.html">Class Digital</a>
                     </div>
                 </div>
             </nav>
@@ -60,13 +60,13 @@
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
                         <i class="lni lni-popup"></i>
-                        <span>Fitur 1</span>
+                        <span>Notification</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
                         <i class="lni lni-cog"></i>
-                        <span>Fitur 2</span>
+                        <span>Setting</span>
                     </a>
                 </li>
             </ul>
@@ -81,16 +81,15 @@
         <!-- Main -->
         <div class="main p-3">
             <h1>Anda memiliki 0 mata kuliah</h1>
-            <p class="desc">Fitur 1
+            <p class="desc">We have professional alliance's with leading Universities and Colleges around the world
             </p>
         </div>
     </div>
 
-    <!-- Menghubungkan file JavaScript eksternal -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <!-- Menghubungkan file jQuery eksternal -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="jQuery.js"></script>
 
 </body>
 
