--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLASSROOM DIGITAL</title>
+    <title>Profile</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -24,16 +24,16 @@
                     <a href="#">Dashboard</a>
                 </div>
             </div>
-            <nav class="navbar navbar-expand-lg bg-transparan">
+            <nav class="nav navbar-expand-lg bg-transparent">
                 <div class="container-fluid mx-5">
                     <div class="ms-auto">
-                        <a class="navbar-brand" id="logo-Text-home" href="index.html">Class Digital</a>
+                        <a class="navbar-brand" id="logo-Text-home" href="dashboard.html">Class Digital</a>
                     </div>
                 </div>
             </nav>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="fitur1.html" class="sidebar-link">
+                    <a href="home.html" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
@@ -60,22 +60,22 @@
                     </ul>
                 </li>
                 <li class="sidebar-item">
-                    <a href="fitur1.html" class="sidebar-link">
+                    <a href="#" class="sidebar-link">
                         <i class="lni lni-popup"></i>
-                        <span>Fitur 1</span>
+                        <span>Notification</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
                         <i class="lni lni-cog"></i>
-                        <span>Fitur 2</span>
+                        <span>Setting</span>
                     </a>
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a id="LogOutButton" class="sidebar-link">
+                <a href="#" class="sidebar-link">
                     <i class="lni lni-exit"></i>
-                    <span>LOG OUT</span>
+                    <span>Logout</span>
                 </a>
             </div>
         </aside>
@@ -85,22 +85,40 @@
             <!-- Bagian Profile -->
             <div class="profile mt-4">
                 <h2>Profile Saya</h2>
-                <img src="img/Minion.jpg" alt="Foto Profil" class="img-thumbnail rounded-circle">
-                <p><strong>Nama:</strong> 1 </p>
-                <p><strong>Email:</strong> 2 </p>
-                <p><strong>Telepon:</strong> 3 </p>
-                <p><strong>Alamat:</strong> 4 </p>
-                <p><strong>Tentang Saya:</strong> Saya seorang pengembang web</p>
+                <img id="profileImage" src="img/Minion.jpg" alt="Foto Profil" class="img-fluid rounded-circle mb-3"
+                    width="150">
+                <p class="img-description"> Klik pada gambar untuk mengubah foto </p>
+                <input type="file" class="d-none" id="imageUpload" accept="image/*">
+                <!-- Form Profile-->
+                <form id="profileForm">
+                    <div class="mb-3">
+                        <label for="name" class="form-label"><strong>Nama:</strong></label>
+                        <input type="text" class="form-control" id="name" placeholder="Masukkan nama Anda">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label"><strong>Email:</strong></label>
+                        <input type="email" class="form-control" id="email" placeholder="Masukkan email Anda">
+                    </div>
+                    <div class="mb-3">
+                        <label for="phone" class="form-label"><strong>Telepon:</strong></label>
+                        <input type="tel" class="form-control" id="phone" placeholder="Masukkan nomor telepon Anda"
+                            pattern="[0-9]{10,15}" title="Masukkan nomor telepon yang valid (10-15 digit)" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="about" class="form-label"><strong>Tentang Saya:</strong></label>
+                        <textarea class="form-control" id="about" rows="3"
+                            placeholder="Ceritakan tentang diri Anda"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Simpan</button>
+                </form>
             </div>
-            <!-- Akhir Bagian Profile -->
         </div>
     </div>
 
-    <!-- Menghubungkan file JavaScript eksternal -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <!-- Menghubungkan file jQuery eksternal -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="jQuery.js"></script>
 </body>
 
 </html>
