--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="fixed-top navbar navbar-expand-lg bg-secondary-subtle">
+    <nav class="fixed-top navbar navbar-expand-lg">
       <div class="container-fluid px-5">
         <a class="navbar-brand" id="logo-Text" href="index.html">Class Digital</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
