--- a/Draft/index.html
+++ b/Draft/index.html
@@ -29,7 +29,7 @@
               </li>
             </ul>
             <div class="d-flex ms-3">
-              <a class="btn btn-secondary me-2" href="#">SIGNUP</a>
+              <a class="btn btn-secondary me-2" href="signup.html">SIGNUP</a>
               <a class="btn btn-primary" href="login.html">LOGIN</a>
             </div>
           </div>
