--- a/Draft/index.html
+++ b/Draft/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Tentang Kami</a>
+                <a class="nav-link active" href="tentangkami.html">Tentang Kami</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Panduan</a>
