--- a/login.html
+++ b/login.html
@@ -11,6 +11,12 @@
 </head>
 
 <body class="login-page">
+
+    <!-- Saat halaman sedang memuat, div ini akan menampilkan animasi -->
+    <div class="preloader">
+        <img src="img/loading.gif">
+    </div>
+
     <!-- Jumbotron untuk Login -->
     <div class="jumbotron-login">
         <h1 class="display-5 text-center">LOGIN</h1>
