--- a/profile.html
+++ b/profile.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+
+    <!-- Saat halaman sedang memuat, div ini akan menampilkan animasi -->
+    <div class="preloader">
+        <img src="img/loading.gif">
+    </div>
+
     <!-- Membuat SideBar-->
     <div class="wrapper">
         <aside id="sidebar">
