--- a/tentangkami.html
+++ b/tentangkami.html
@@ -7,43 +7,21 @@
     <title>Tentang Kami - Class Digital</title>
     <style>
         body {
-            background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
-            font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
         }
         .section {
-            margin-top: 20px;
-            padding: 30px;
-            background: ghostwhite;
-            border-radius: 25px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-        h1, h3 {
-            color: #3a3a3a;
+            margin-top: 40px;
+            padding: 20px;
+                background: ghostwhite;
+            border-radius: 15px;
+            border-color: blueviolet;
+            box-shadow: 0 0px 0px rgba(0, 0, 0, 0.1);
         }
         .vision-mission {
-         
-            border: 1px solid #ccc;
-            border-radius: 25px;
-            padding: 40px;
-            background-color: #f9f9f9;
-           
+            margin-top: 20px;
         }
         .text-justify {
-            text-align: justify;
-        }
-        .btn-custom {
-            background-color: blueviolet;
-            color: white;
-        }
-        .btn-custom:hover {
-            background-color: #7b1fa2;
-        }
-        footer {
-            margin-top: 40px;
-            text-align: center;
-            padding: 20px 0;
-            background-color: #fff;
-            border-top: 2px solid blueviolet;
+            text-align: justify; /* Justify untuk teks */
         }
     </style>
 </head>
@@ -60,53 +38,35 @@
     <div class="section row">
         <div class="col-md-6 vision-mission">
             <h3>Visi</h3>
-            <p class="text-justify">Visi kami adalah menciptakan ekosistem pembelajaran digital yang inklusif dan berkelanjutan, di mana setiap individu, tanpa memandang latar belakang, memiliki kesempatan untuk mengakses pendidikan berkualitas tinggi. Kami berkomitmen untuk mengembangkan inovasi dalam metode pengajaran, teknologi, dan kurikulum, memastikan bahwa setiap peserta didik dilengkapi dengan keterampilan yang relevan dan praktis untuk menghadapi tantangan di dunia yang terus berubah.</p>
-            <button class="btn btn-custom">Pelajari Visi Kami</button>
+            <p class="text-justify">Visi kami adalah menciptakan ekosistem pembelajaran digital yang inklusif dan berkelanjutan, di mana setiap individu, tanpa memandang latar belakang, memiliki kesempatan untuk mengakses pendidikan berkualitas tinggi. Kami berkomitmen untuk mengembangkan inovasi dalam metode pengajaran, teknologi, dan kurikulum, memastikan bahwa setiap peserta didik dilengkapi dengan keterampilan yang relevan dan praktis untuk menghadapi tantangan di dunia yang terus berubah..</p>
+            <button class="btn btn-primary">Pelajari Visi Kami</button>
         </div>
         <div class="col-md-6 vision-mission">
             <h3>Misi</h3>
             <p class="text-justify">Misi kami adalah menyediakan platform pembelajaran yang mudah diakses dan terjangkau, memungkinkan setiap individu untuk mengembangkan keterampilan digital yang relevan dengan kebutuhan industri saat ini. Kami berkomitmen untuk menawarkan kursus yang berkualitas, didukung oleh pengajaran yang interaktif dan sumber daya terbaru, agar peserta dapat belajar dengan cara yang menyenangkan dan efektif.</p>
-            <button class="btn btn-custom">Pelajari Misi Kami</button>
+            <button class="btn btn-primary">Pelajari Misi Kami</button>
         </div>
     </div>
 
     <div class="section row">
-        <div class="col-md-12 vision-mission">
+        <div class="col-md-12">
             <h3>Tim Kami</h3>
-            <p class="text-justify">Di Class Digital, kami bangga memiliki tim pengajar yang terdiri dari para profesional berpengalaman dan ahli di bidangnya. Setiap anggota tim kami tidak hanya memiliki kualifikasi akademis yang solid, tetapi juga pengalaman praktis yang mendalam dalam industri pendidikan dan teknologi.</p>
-            <button class="btn btn-custom">Kenali Tim Kami</button>
+            <p>Tim pengajar kami terdiri dari para ahli yang berpengalaman di bidangnya, siap mendukung Anda dalam perjalanan belajar.</p>
+            <button class="btn btn-primary">Kenali Tim Kami</button>
         </div>
     </div>
 
     <div class="section row">
-        <div class="col-md-12 vision-mission">
+        <div class="col-md-12">
             <h3>Bergabunglah dengan Kami</h3>
-            <p class="text-justify">Kami menawarkan kurikulum berkualitas tinggi yang dirancang oleh para ahli di bidangnya, memastikan bahwa Anda mendapatkan pengetahuan yang relevan dan terbaru. Dengan platform online kami, Anda dapat belajar kapan saja dan di mana saja, menyesuaikan pengalaman belajar Anda dengan jadwal dan gaya hidup Anda.</p>
-
-  <p class="text-justify">Di Class Digital, Anda tidak hanya akan belajar, tetapi juga menjadi bagian dari komunitas yang mendukung. Bergabunglah dengan sesama peserta didik yang saling berbagi pengalaman dan membangun jaringan yang berharga. Tim pengajar kami siap membantu Anda di setiap langkah, memberikan dukungan dan bimbingan akademis untuk membantu Anda mencapai tujuan belajar Anda.   </p>
-
-
-  <p class="text-justify">Proses bergabung sangatlah mudah. Cukup isi formulir pendaftaran di situs kami, telusuri katalog kursus kami, dan pilih yang sesuai dengan minat dan tujuan Anda. Setelah itu, Anda siap untuk mengakses materi pembelajaran, mengikuti kelas secara langsung, dan terlibat dalam diskusi yang mendalam dengan pengajar dan teman sekelas.</p>
-
-
-  <p class="text-justify">Kami berkomitmen untuk menciptakan ekosistem pembelajaran yang inklusif dan berkelanjutan, di mana setiap individu memiliki kesempatan untuk mengakses pendidikan berkualitas tinggi. Dengan bergabung, Anda menjadi bagian dari visi ini dan berkontribusi pada perubahan positif dalam dunia pendidikan.</p>
-
-
-  <p class="text-justify">Jangan ragu untuk mengambil langkah pertama menuju masa depan yang lebih cerah. Bergabunglah dengan Class Digital hari ini dan mulailah perjalanan belajar yang mengubah hidup!</p>
-
-
-            <button class="btn btn-custom">Bergabung Sekarang</button>
+            <p>Jadilah bagian dari komunitas kami dan raih potensi terbaik Anda melalui berbagai kursus yang kami tawarkan.</p>
+            <button class="btn btn-primary">Bergabung Sekarang</button>
         </div>
     </div>
 </div>
-
-<footer>
-    <p>&copy; 2024 Class Digital. Semua hak dilindungi.</p>
-</footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
