--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="tentangkami.html">Tentang Kami</a>
+              <a class="nav-link active" href="#tentangkami">Tentang Kami</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#panduan">Panduan</a>
@@ -67,7 +67,7 @@
   <section id="panduan">
     <div class="container my-5">
       <div class="row">
-        <h1 class="main-heading" style="text-align: center;">
+        <h1 class="main-heading" style="text-align: center; font-weight: bold;">
           PANDUAN UNTUK USER
         </h1>
         <div class="col-md-3">
@@ -113,6 +113,55 @@
       </div>
     </div>
   </section>
+
+  <section id="tentangkami">
+    <div class="container my-5">
+      <div class="row">
+        <h1 class="main-heading" style="text-align: center; font-weight: bold;">
+          TENTANG KAMI
+        </h1>
+        <div class="col-md-6">
+          <div class="card">
+            <h3 style="font-weight: bold;">Visi</h3>
+            <p class="text-justify">Visi kami adalah menciptakan ekosistem pembelajaran digital yang inklusif dan
+              berkelanjutan, di mana setiap individu, tanpa memandang latar belakang, memiliki kesempatan untuk
+              mengakses pendidikan berkualitas tinggi.</p>
+              <p>Kami berkomitmen untuk mengembangkan inovasi dalam metode
+              pengajaran, teknologi, dan kurikulum, memastikan bahwa setiap peserta didik dilengkapi dengan keterampilan
+              yang relevan dan praktis untuk menghadapi tantangan di dunia yang terus berubah.</p>
+            <a href="#" class="btn btn-outline-primary">Pelajari Visi Kami</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <h3 style="font-weight: bold;">Misi</h3>
+            <p class="text-justify">Misi kami adalah menyediakan platform pembelajaran yang mudah diakses dan
+              terjangkau, memungkinkan setiap individu untuk mengembangkan keterampilan digital yang relevan dengan
+              kebutuhan industri saat ini. </p>
+              <p>Kami berkomitmen untuk menawarkan kursus yang berkualitas, didukung oleh
+              pengajaran yang interaktif dan sumber daya terbaru, agar peserta dapat belajar dengan cara yang
+              menyenangkan dan efektif.</p>
+              <a href="#" class="btn btn-outline-primary">Pelajari Misi Kami</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <h3 style="font-weight: bold;">Tim Kami</h3>
+            <p>Tim pengajar kami terdiri dari para ahli yang berpengalaman di bidangnya, siap mendukung Anda dalam perjalanan belajar.</p>
+            <a href="#" class="btn btn-outline-primary">Kenali Tim Kami</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <h3 style="font-weight: bold;">Bergabunglah dengan Kami</h3>
+            <p>Jadilah bagian dari komunitas kami dan raih potensi terbaik Anda melalui berbagai kursus yang kami tawarkan.</p>
+            <a href="#" class="btn btn-outline-primary">Bergabung Sekarang</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -124,6 +173,5 @@
   <script src="jQuery.js"></script>
 
 </body>
-
 
 </html>
