--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
             </nav>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="dashboard.html" class="sidebar-link">
+                    <a href="home.html" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
