--- a/login.html
+++ b/login.html
@@ -17,6 +17,36 @@
         <img src="img/loading.gif">
     </div>
 
+    <header>
+        <!-- Navbar -->
+        <nav class="fixed-top navbar navbar-expand-lg">
+            <div class="container-fluid px-5">
+                <a class="navbar-brand" id="logo-Text" href="index.html">Class Digital</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="home.html#tentangkami">Tentang Kami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="home.html##panduan">Panduan</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex ms-3">
+                        <a class="btn btn-secondary me-2" href="signup.html">SIGN UP</a>
+                        <a class="btn btn-primary me-2" href="login.html">LOGIN</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <!-- Jumbotron untuk Login -->
     <div class="jumbotron-login">
         <h1 class="display-5 text-center">LOGIN</h1>
