--- a/login.html
+++ b/login.html
@@ -39,8 +39,8 @@
                         </li>
                     </ul>
                     <div class="d-flex ms-3">
-                        <a class="btn btn-secondary me-2" href="signup.html">SIGN UP</a>
-                        <a class="btn btn-primary me-2" href="login.html">LOGIN</a>
+                        <a class="btn btn-light me-2" href="signup.html">SIGN UP</a>
+                        <a class="btn btn-custom" href="login.html">LOGIN</a>
                     </div>
                 </div>
             </div>
@@ -71,6 +71,9 @@
     </div>
 
     <!-- Menghubungkan file jQuery eksternal -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="jQuery.js"></script>
