--- a/profile.html
+++ b/profile.html
@@ -109,7 +109,7 @@
                         <textarea class="form-control" id="about" rows="3"
                             placeholder="Ceritakan tentang diri Anda"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">SIMPAN</button>
+                    <button type="submit" class="btn btn-custom">SIMPAN</button>
                 </form>
             </div>
         </div>
