--- a/home.html
+++ b/home.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -38,8 +43,8 @@
             </li>
           </ul>
           <div class="d-flex ms-3">
-            <a class="btn btn-secondary me-2" href="signup.html">SIGN UP</a>
-            <a class="btn btn-primary me-2" href="login.html">LOGIN</a>
+            <a class="btn btn-light me-2" href="signup.html">SIGN UP</a>
+            <a class="btn btn-custom" href="login.html">LOGIN</a>
           </div>
         </div>
       </div>
@@ -59,7 +64,7 @@
           Eduplan Education Can Fulfil Your International Education Dream As Per Your Best Fit with world top
           universities and colleges.
         </p>
-        <a class="btn btn-primary" href="login.html">LOGIN</a>
+        <a class="btn btn-custom" href="login.html">LOGIN</a>
       </section>
     </div>
   </main>
@@ -67,9 +72,9 @@
   <section id="panduan">
     <div class="container my-5">
       <div class="row">
-        <h1 class="main-heading" style="text-align: center; font-weight: bold;">
+        <h2 class="main-heading" style="text-align: center; font-family: 'Roboto',  sans-serif; font-weight: 400;">
           PANDUAN UNTUK USER
-        </h1>
+        </h2>
         <div class="col-md-3">
           <div class="card">
             <img src="img/dosen.jpg" alt="Dosen" class="card-img-top">
@@ -117,16 +122,16 @@
   <section id="tentangkami">
     <div class="container my-5">
       <div class="row">
-        <h1 class="main-heading" style="text-align: center; font-weight: bold;">
+        <h2 class="main-heading" style="text-align: center; font-family: 'Roboto',  sans-serif; font-weight: 400;">
           TENTANG KAMI
-        </h1>
+        </h2>
         <div class="col-md-6">
           <div class="card">
             <h3 style="font-weight: bold;">Visi</h3>
             <p class="text-justify">Visi kami adalah menciptakan ekosistem pembelajaran digital yang inklusif dan
               berkelanjutan, di mana setiap individu, tanpa memandang latar belakang, memiliki kesempatan untuk
               mengakses pendidikan berkualitas tinggi.</p>
-              <p>Kami berkomitmen untuk mengembangkan inovasi dalam metode
+            <p>Kami berkomitmen untuk mengembangkan inovasi dalam metode
               pengajaran, teknologi, dan kurikulum, memastikan bahwa setiap peserta didik dilengkapi dengan keterampilan
               yang relevan dan praktis untuk menghadapi tantangan di dunia yang terus berubah.</p>
             <a href="#" class="btn btn-outline-primary">Pelajari Visi Kami</a>
@@ -138,23 +143,25 @@
             <p class="text-justify">Misi kami adalah menyediakan platform pembelajaran yang mudah diakses dan
               terjangkau, memungkinkan setiap individu untuk mengembangkan keterampilan digital yang relevan dengan
               kebutuhan industri saat ini. </p>
-              <p>Kami berkomitmen untuk menawarkan kursus yang berkualitas, didukung oleh
+            <p>Kami berkomitmen untuk menawarkan kursus yang berkualitas, didukung oleh
               pengajaran yang interaktif dan sumber daya terbaru, agar peserta dapat belajar dengan cara yang
               menyenangkan dan efektif.</p>
-              <a href="#" class="btn btn-outline-primary">Pelajari Misi Kami</a>
+            <a href="#" class="btn btn-outline-primary">Pelajari Misi Kami</a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card">
             <h3 style="font-weight: bold;">Tim Kami</h3>
-            <p>Tim pengajar kami terdiri dari para ahli yang berpengalaman di bidangnya, siap mendukung Anda dalam perjalanan belajar.</p>
+            <p>Tim pengajar kami terdiri dari para ahli yang berpengalaman di bidangnya, siap mendukung Anda dalam
+              perjalanan belajar.</p>
             <a href="#" class="btn btn-outline-primary">Kenali Tim Kami</a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card">
             <h3 style="font-weight: bold;">Bergabunglah dengan Kami</h3>
-            <p>Jadilah bagian dari komunitas kami dan raih potensi terbaik Anda melalui berbagai kursus yang kami tawarkan.</p>
+            <p>Jadilah bagian dari komunitas kami dan raih potensi terbaik Anda melalui berbagai kursus yang kami
+              tawarkan.</p>
             <a href="#" class="btn btn-outline-primary">Bergabung Sekarang</a>
           </div>
         </div>
@@ -162,12 +169,10 @@
     </div>
   </section>
 
-  <script src="script.js"></script>
+  <!-- Menghubungkan file jQuery eksternal -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
-  <!-- Menghubungkan file jQuery eksternal -->
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
   <script src="jQuery.js"></script>
