--- a/profile.html
+++ b/profile.html
@@ -45,6 +45,12 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
+                    <a href="calendar.html" class="sidebar-link">
+                        <i class="lni lni-calendar"></i>
+                    <span>Calendar</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
                     <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
                         data-bs-target="#multi" aria-expanded="false" aria-controls="multi">
                         <i class="lni lni-book"></i>
