--- a/home.html
+++ b/home.html
@@ -169,6 +169,38 @@
     </div>
   </section>
 
+   <!-- Footer -->
+   <footer class="bg-dark text-light py-3 mt-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <h5>CLASSROOM DIGITAL</h5>
+          <p>Platform pembelajaran digital untuk mendukung kemajuan pendidikan dengan teknologi.</p>
+        </div>
+        <div class="col-md-3">
+          <h6>Navigasi</h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-light">Home</a></li>
+            <li><a href="#tentangkami" class="text-light">Tentang Kami</a></li>
+            <li><a href="#panduan" class="text-light">Panduan</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h6>Kontak Kami</h6>
+          <ul class="list-unstyled">
+            <li>Email: info@classdigital.com</li>
+            <li>Telepon: +62 123 456 789</li>
+            <li>Alamat: Jl. Pendidikan No.10, Yogyakarta</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text-end pt-3">
+        <p>&copy; 2024 Classroom Digital. All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+
   <!-- Menghubungkan file jQuery eksternal -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
